Upgrade Reststop to Java 21
Upgrade Reststop from Java 8 to Java 21. Added Github
actions workflow for publishing maven artifacts. Commented out
Websockets since upgrading was more complicated than expected.